fix(css): use auto-fill instead of auto-fit to avoid stretching single movie

--- a/src/views/HomeView/MoviesList/MoviesList.scss
+++ b/src/views/HomeView/MoviesList/MoviesList.scss
@@ -1,6 +1,6 @@
 .movies-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(256px, 100%), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(256px, 100%), 1fr));
   gap: var(--s3);
   padding: var(--s3);
   width: 100%;
