--- a/src/views/ProfileView/FavoriteMoviesList/FavoriteMoviesList.scss
+++ b/src/views/ProfileView/FavoriteMoviesList/FavoriteMoviesList.scss
@@ -1,6 +1,6 @@
 .fav-movies-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(256px, 100%), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(256px, 100%), 1fr));
   gap: var(--s3);
   margin-top: var(--s3);
   width: 100%;
